load("@rules_java//java:defs.bzl", "java_library")
load("@rules_java//java:java_binary.bzl", "java_binary")
load(":pure.bzl", "PURE_PLATFORM_VERSION", "pure_antlr_gen", "pure_generator", "pure_par", "pure_pct_report")

# 2b. Platform Properties Generation
genrule(
    name = "platform_properties_gen",
    outs = ["org/finos/legend/pure/platform.properties"],
    cmd = "echo 'version=%s' > $(location org/finos/legend/pure/platform.properties)" % PURE_PLATFORM_VERSION,
)

filegroup(
    name = "platform_pure_srcs",
    srcs = glob(["src/main/resources/**/*.pure"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "grammar_files",
    srcs = [
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Parser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePath.g4",
    ],
    visibility = ["//visibility:public"],
)

# 1. Antlr Generation
pure_antlr_gen(
    name = "antlr_gen",
    srcs = [
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Parser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/core/M3CoreParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParser.g4",
        "src/main/antlr4/org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePath.g4",
    ],
    outs = [
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Lexer.tokens",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3Parser.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserBaseListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserBaseVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/m3parser/antlr/M3ParserVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrLexer.tokens",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParser.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserBaseListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserBaseVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/top/antlr/TopAntlrParserVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathBaseListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathBaseVisitor.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathLexer.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathLexer.tokens",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathListener.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathParser.java",
        "org/finos/legend/pure/m3/serialization/grammar/treepathparser/TreePathVisitor.java",
    ],
    grammar_files = ["//legend-pure/legend-pure-core/legend-pure-m4:grammar_files"],
    visibility = ["//visibility:public"],
)

# 2. Bootstrap Generator
pure_generator(
    name = "bootstrap_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    out = "bootstrap_gen.srcjar",
    args_list = [
        "legend-pure/legend-pure-core/legend-pure-m3-core/src/main/resources",
        "/platform/pure/grammar/m3.pure",
    ],
    tool = "//legend-pure/legend-pure-core/legend-pure-m3-bootstrap-generator:CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "platform_properties_lib",
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core",
    resources = [":platform_properties_gen"],
    visibility = ["//visibility:public"],
)

# 3. Base Library

# 4. Lazy Generator
java_binary(
    name = "M3LazyCoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.coreinstance.lazy.generator.M3LazyCoreInstanceGenerator",
    runtime_deps = [
        ":m3-core-base",
        ":m3_core_resources",
    ],
)

pure_generator(
    name = "lazy_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    out = "lazy_gen.srcjar",
    args_list = ["/platform/pure/grammar/m3.pure"],
    tool = ":M3LazyCoreInstanceGenerator",
)

# 5. Other Generator
java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m3-core-base",
        ":m3_core_resources",
    ],
)

pure_generator(
    name = "other_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    out = "other_gen.srcjar",
    args_list = [
        "M3Platform",
        "/platform/pure/grammar/milestoning.pure,/platform/pure/routing.pure,/platform/pure/anonymousCollections.pure,/platform/pure/relation.pure,/platform/pure/routing.pure,/platform/pure/variant/variant.pure,/platform/pure/essential/meta/graph/elementToPath.pure,/platform/pure/essential/lang/creation/dynamicNew.pure",
    ],
    tool = ":M3CoreInstanceGenerator",
)

# 6. PCT Generation
java_binary(
    name = "FunctionsGeneration",
    main_class = "org.finos.legend.pure.m3.pct.functions.generation.FunctionsGeneration",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m3-core-base",
        ":m3_core_resources",
        ":pure_platform_par_lib",
    ],
)

pure_pct_report(
    name = "pct_reports",
    outs = [
        "pct-reports/FUNCTIONS_essential.json",
        "pct-reports/FUNCTIONS_grammar.json",
    ],
    report_classes = [
        "org.finos.legend.pure.m3.PlatformCodeRepositoryProvider.essentialFunctions",
        "org.finos.legend.pure.m3.PlatformCodeRepositoryProvider.grammarFunctions",
    ],
    tool = ":FunctionsGeneration",
)

java_library(
    name = "pct_reports_lib",
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core",
    resources = [":pct_reports"],
    visibility = ["//visibility:public"],
)

# 6. Final Library
load("//tools/build_rules:java_validation.bzl", "validated_java_library")

validated_java_library(
    name = "legend-pure-m3-core",
    srcs = [
        ":lazy_gen",
        ":other_gen",
    ],
    javacopts = [
        "-Xep:ComparableType:OFF",
    ],
    visibility = ["//visibility:public"],
    exports = [
        ":m3-core-base",
        ":pct_reports_lib",
    ],
    deps = [
        ":m3-core-base",
        ":pct_reports_lib",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "m3-core-base",
    visibility = ["//visibility:public"],
    exports = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3:m3_kernel",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/aggregate/generation",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/aggregate/model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/functions/model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/reports/model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/shared/generation",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/shared/model",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/pct/shared/provider",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/forkjoin",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/kerberos",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/locks",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/test",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/tree",
        ":platform_metadata_lib",
    ],
)

java_library(
    name = "platform_metadata_lib",
    resources = [":platform_metadata"],
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core",
    visibility = ["//visibility:public"],
)

genrule(
    name = "platform_metadata",
    outs = ["metadata/specs/platform.json"],
    cmd = "mkdir -p $$(dirname $@) && echo '{\"name\": \"platform\", \"dependencies\": []}' > $@",
    visibility = ["//visibility:public"],
)

java_library(
    name = "m3-core-test-utils",
    visibility = ["//visibility:public"],
    exports = [
        ":m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/main/java/org/finos/legend/pure/m3/tools/test",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/serialization/compiler/reference/v1:TestReferenceIdExtensionV1_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:AbstractCompiledStateIntegrityTest_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:AbstractPureTestWithCoreCompiled_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:AbstractTestGeneralizationAtRuntime_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests:AbstractTestMeasure_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/elements/_class:AbstractTestConstraints_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/elements/_class:AbstractTestDispatchQualifiedProperties_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/elements/_enum:AbstractTestEnumeration_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/elements/function:AbstractTestReturn_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/elements/function:TestAdvancedOpenVariable_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/elements/property:AbstractTestDefaultValue_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function:AbstractTestFunctionDefinitionModify_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base:PureExpressionTest_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/_boolean:AbstractTestAnd_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/_boolean:AbstractTestNot_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/_boolean:AbstractTestOr_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/_boolean:AbstractTestPrecedence_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/asserts:AbstractTestAssert_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestAt_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestFirst_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestGetAll_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestInit_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestIsEmpty_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestLast_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestMapCollection_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestMapZeroOne_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestMap_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestRange_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestReverse_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestSlice_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/collection:AbstractTestTail_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/date:AbstractTestDayOfMonth_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/date:AbstractTestHour_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/date:AbstractTestMinute_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/date:AbstractTestNewDate_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/date:AbstractTestSecond_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/io:AbstractTestPrint_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestCast_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestCompare_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestCopyAtRuntime_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestDynamicNewConstraintsHandler_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestDynamicNewConstraints_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestDynamicNewGetterOverride_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestDynamicNew_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestEvaluateTypeManagement_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestEvaluate_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestMatch_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestNewAtRuntime_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestNewInferenceAtRuntime_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/lang:AbstractTestRawEvalProperty_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestArcCosine_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestArcSine_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestCeiling_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestDivide_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestFloor_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestPow_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestPrecedence_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestRem_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestRound_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestSqrt_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/math:AbstractTestTimes_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/meta:AbstractTestCanReactivateDynamically_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/meta:AbstractTestId_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/meta:AbstractTestInstanceOf_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/meta:AbstractTestNewEnumeration_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/meta:AbstractTestPathToElement_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/meta:AbstractTestReactivate_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/multiplicity:AbstractTestGetUpperBound_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/multiplicity:AbstractTestToMultiplicity_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/multiplicity:AbstractTestToOneMany_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/multiplicity:AbstractTestToOne_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestFormat_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestIndexOf_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestLength_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestParseBoolean_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestParseDate_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestParseFloat_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestParseInteger_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestSubstring_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestToString_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/function/base/string:AbstractTestTrim_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental:AbstractTestIncrementalCompilation_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_AsFunctionReturn_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_AsPointer_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_Constraints_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_FunctionExpressionParam_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_FunctionParamType_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_InCast_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_InCopy_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_InGeneralization_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_class:TestPureRuntimeClass_Property_UsedInAutoCollect_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/_package:TestPureRuntimePackage_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/association:TestPureRuntimeAssociation_AsPointer_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/association:TestPureRuntimeAssociation_UseProperty_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/association:TestPureRuntimeAssociation_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/function:TestPureRuntimeFunction_All_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/function:TestPureRuntimeFunction_Constraint_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/function:TestPureRuntimeFunction_Lambda_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/imports:TestPureRuntimeImport_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/milestoning:TestMilestoning_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/profile:TestPureRuntimeStereotype_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/incremental/profile:TestPureRuntimeTaggedValue_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core/src/test/java/org/finos/legend/pure/m3/tests/milestoning:AbstractTestMilestoning_lib",
    ],
)

# 7. PAR Generator
java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m3-core-base",
        ":m3_core_resources",
        ":platform_properties_lib",
    ],
)

pure_par(
    name = "platform_par",
    out = "pure-platform.par",
    repo_name = "platform",
    tool = ":PureJarGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core",
    resources = [
        ":bootstrap_gen",
        ":lazy_gen",
        ":other_gen",
        ":platform_par",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "m3_core_resources",
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-core/src/main/resources",
    resources = glob(
        ["src/main/resources/**"],
        exclude = ["src/main/resources/org/finos/legend/pure/platform.properties"],
    ),
    visibility = ["//visibility:public"],
)

genrule(
    name = "inspect_par",
    srcs = [":platform_par"],
    outs = ["inspection.txt"],
    cmd = "unzip -l $(location :platform_par) > $(OUTS)",
)



genrule(
    name = "platform_compiled_graph",
    srcs = glob(["src/main/resources/**/*.pure"]),
    outs = ["platform_compiled_metadata.jar"],
    tools = ["//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled:JavaCodeGeneration"],
    toolchains = ["@bazel_tools//tools/jdk:current_java_runtime"],
    cmd = """
    mkdir -p $(@D)/platform_gen_out
    mkdir -p $(@D)/platform_classes_out
    export JAVA_OPTS="-Dpure.usePar=false"
    $(location //legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled:JavaCodeGeneration) \
        platform \
        $(@D)/platform_classes_out \
        $(@D)/platform_gen_out

    $(JAVABASE)/bin/jar cf $@ -C $(@D)/platform_classes_out metadata
    """,
    visibility = ["//visibility:public"],
)

java_import(
    name = "platform_compiled_graph_import",
    jars = [":platform_compiled_metadata.jar"],
    visibility = ["//visibility:public"],
)
