load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "precisePrimitives-base",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m3-precisePrimitives",
    exports = [
        ":precisePrimitives-base",
        ":pure_platform_precise_primitives_par_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

# Local generator binary that includes precisePrimitives resources on the classpath
java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    runtime_deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
    ],
)

genrule(
    name = "pure_platform_precise_primitives_par",
    srcs = [
         ":precisePrimitives-base",
         "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
    ],
    outs = ["pure-platform_precise_primitives.par"],
    cmd = """
        $(location :PureJarGenerator) \
        0.0.0-SNAPSHOT \
        platform_precise_primitives \
        $$(dirname $(location pure-platform_precise_primitives.par))
    """,
    tools = [":PureJarGenerator"],
)

java_library(
    name = "pure_platform_precise_primitives_par_lib",
    resources = [":pure_platform_precise_primitives_par"],
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-precisePrimitives",
)

java_test(
    name = "TestPrecisePrimitivesCompiledStateIntegrity",
    test_class = "org.finos.legend.pure.code.core.TestPrecisePrimitivesCompiledStateIntegrity",
    srcs = ["src/test/java/org/finos/legend/pure/code/core/TestPrecisePrimitivesCompiledStateIntegrity.java"],
    runtime_deps = [
        ":legend-pure-m3-precisePrimitives",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
    ], 
    deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:junit_junit",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
