load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_par")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "precisePrimitives-base",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m3-precisePrimitives",
    exports = [
        ":precisePrimitives-base",
        ":pure_platform_precise_primitives_par_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

# Local generator binary that includes precisePrimitives resources on the classpath
java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    runtime_deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
    ],
)

pure_par(
    name = "pure_platform_precise_primitives_par",
    out = "pure-platform_precise_primitives.par",
    repo_name = "platform_precise_primitives",
    tool = ":PureJarGenerator",
)

java_library(
    name = "pure_platform_precise_primitives_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-precisePrimitives",
    resources = [":pure_platform_precise_primitives_par"],
)

java_test(
    name = "TestPrecisePrimitivesCompiledStateIntegrity",
    srcs = ["src/test/java/org/finos/legend/pure/code/core/TestPrecisePrimitivesCompiledStateIntegrity.java"],
    test_class = "org.finos.legend.pure.code.core.TestPrecisePrimitivesCompiledStateIntegrity",
    runtime_deps = [
        ":legend-pure-m3-precisePrimitives",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
    ],
    deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
