load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("//tools/build_rules:pure_generation.bzl", "pure_model_generation", "pure_par")

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "PrecisePrimitives",
    source_path = "/platform_precise_primitives/precisePrimitives.pure",
    tool = ":M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "precisePrimitives-base-gen",
    srcs = [":pure_gen"],
    visibility = ["//visibility:public"],
    deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m3-precisePrimitives",
    visibility = ["//visibility:public"],
    exports = [
        ":precisePrimitives-base",
        ":precisePrimitives-base-gen",
        ":pure_platform_precise_primitives_par_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

java_library(
    name = "precisePrimitives-base",
    srcs = [
        "src/main/java/org/finos/legend/pure/code/core/PlatformPrecisePrimitivesCodeRepositoryProvider.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)


# Local generator binary that includes precisePrimitives resources on the classpath

pure_par(
    name = "pure_platform_precise_primitives_par",
    out = "pure-platform_precise_primitives.par",
    repo_name = "platform_precise_primitives",
    deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_precise_primitives_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-core/legend-pure-m3-precisePrimitives",
    resources = [":pure_platform_precise_primitives_par"],
    visibility = ["//visibility:public"],
)

java_test(
    name = "TestPrecisePrimitivesCompiledStateIntegrity",
    srcs = ["src/test/java/org/finos/legend/pure/code/core/TestPrecisePrimitivesCompiledStateIntegrity.java"],
    test_class = "org.finos.legend.pure.code.core.TestPrecisePrimitivesCompiledStateIntegrity",
    runtime_deps = [
        ":legend-pure-m3-precisePrimitives",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
    ],
    deps = [
        ":precisePrimitives-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
